fix spacing in help

--- a/src/styles/help.scss
+++ b/src/styles/help.scss
@@ -2,10 +2,11 @@
 
 .help_container {
   @include flexContainer(column);
-  padding: 1rem;
+  padding: 1.5rem;
   width: 100%;
   height: 100vh;
   margin: auto;
+  margin-top: 1rem;
   position: absolute;
   top: 0;
   bottom: 0;
